discussion/kv_engine/159084/159084_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Add logging to interesting NexusKVStore operations

Add logging to the NexusKVStore functions that we have already
implemented that do comparisons or interesting setup.

Change-Id: Ia50e1e407755b58037111a5cc5f6abd0b4f8b9e4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-11 08:09:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-11 08:18:36.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38497/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38497/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11947/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11947/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/862/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/862/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13382/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13382/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12830/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/869/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13024/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13024/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20927/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20927/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11228/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:60:41: error: incomplete result type "Collections::VB::Manifest" in function definition [clang-diagnostic-error]
Collections::VB::Manifest NexusKVStore::generateSecondaryVBManifest(
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:10: error: variable has incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
    auto secondaryManifest = primaryCommitData.collections.getManifest();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:119:34: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                primaryVBManifest.lock(cid).getItemCount());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:121:36: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                secondaryVBManifest.lock(cid).getItemCount());
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:125:34: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                primaryVBManifest.lock(cid).getPersistedHighSeqno());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:127:36: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                secondaryVBManifest.lock(cid).getPersistedHighSeqno());
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:133:34: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                primaryVBManifest.lock(cid).getDiskSize());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:135:36: error: member access into incomplete type "Collections::VB::Manifest" [clang-diagnostic-error]
                secondaryVBManifest.lock(cid).getDiskSize());
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush.h:28:7: note: forward declaration of "Collections::VB::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:163:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:246:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::delVBucket: {} fileRev:{}", vbucket, fileRev);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:416:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::prepareToCreate: {}:", vbid);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:423:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:460:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:475:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::prepareToCreateImpl: {}:", vbid);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11228/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:60:41:
error: incomplete result type "Collections::VB::Manifest" in function definition [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32826/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:60:41:
error: incomplete result type "Collections::VB::Manifest" in function definition
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32826/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9924/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
